Modified cart style + added shipping + payment method TODO: fix buy button on mobile version

--- a/css/style_cart.css
+++ b/css/style_cart.css
@@ -8,7 +8,13 @@ table{
     width: 100%;
     text-align: center;
     color: var(--text);
-    
+    border-radius: 0% 0% 0% 0% / 0% 0% 0% 0% ;
+    box-shadow: 15px 15px rgba(0, 0, 0, 0.144);
+    transition: all .4s ease;   
+}
+table:hover{
+    border-radius: 0% 0% 50% 50% / 0% 0% 5% 5% ;
+    box-shadow: 10px 10px rgba(0, 0, 0, 0.219);
 }
 table tr:not(:first-of-type) td{
     border-bottom: 1px solid var(--default);
@@ -28,7 +34,46 @@ main div{
     margin: 5% 10% 5% 10%;
     color: var(--text);
 }
-main div:not(:first-of-type){
+.footer > div:first-child{
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    bottom: 0;
+}
+.footer div div span{
+    display: block;
+}
+.footer div div {
+    background: var( --body_background);
+    padding-left: 20px;
+    border-radius: 0% 0% 0% 0% / 0% 0% 0% 0% ;
+    box-shadow: 7px 7px rgba(0, 0, 0, 0.144);
+    transition: all .4s ease;
+}
+.footer div div:hover {
+    border-radius: 0% 0% 50% 50% / 0% 0% 5% 5% ;
+    box-shadow: 10px 10px rgba(0, 0, 0, 0.219);
+}
+#indirizzo {
+    width: 60%;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.footer div div:last-of-type {
+    border: none;
+    box-shadow: none;
+    display: inline-block;
+    margin-bottom: 5px;
+    box-sizing: border-box;
+    padding-bottom: 20px;
+    padding-left: 0%;
+}
+.footer div p {
+    display: inline-block;
+    font-size: 2rem;
+    width: 40%;
+}
+
+/* main div:not(:first-of-type){
     border: 3px solid var(--default);
     bottom: 0;
     width: 80%; 
@@ -55,7 +100,7 @@ main div:not(:first-of-type) div div:first-of-type{
     padding: 0;
     float: right;
     border: none;
-}
+} */
 
 /* -- quantity box buttons -- */
 
@@ -98,11 +143,13 @@ main div:not(:first-of-type) div div:first-of-type{
 .quantity.buttons_added .minus {
     border-right: 0; 
     color: var(--default);
+    border-bottom-left-radius: 50%;
 }
    
 .quantity.buttons_added .plus {
     border-left: 0; 
     color: var(--text);
+    border-top-right-radius: 50%;
 }
    
 .quantity.buttons_added .minus:hover,.quantity.buttons_added .plus:hover {
@@ -121,6 +168,111 @@ main div:not(:first-of-type) div div:first-of-type{
 
 /* -- buy button -- */
 .button-buy {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: right;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 100%;
+    background: var(--body_background);
+    margin-right: 0%;
+    margin-left: 37%;
+  }
+  
+  .effect1 {
+    color: var(--default);
+    text-decoration: none;
+    font-size: 24px;
+    position: relative;
+    right: 0%;
+    padding: 10px 50px 10px 20px;
+  
+    -webkit-transition: all 0.3s;
+  
+    -o-transition: all 0.3s;
+  
+    transition: all 0.3s;
+  
+    -webkit-transform: scale(3);
+  
+        -ms-transform: scale(3);
+  
+            transform: scale(1); /*change scale(3) to scale(1)*/
+  }
+  
+  .effect1 .bg {
+    background: var(--default);
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    margin-top: -1px;
+    z-index: -1;
+  
+    -webkit-transition: all 0.3s;
+  
+    -o-transition: all 0.3s;
+  
+    transition: all 0.3s;
+  }
+  
+  .effect1:hover {
+    padding-right: 20px;
+    color: var(--account_nav_text);
+  }
+  
+  .effect1:hover .bg {
+    height: 100%;
+    width: 100%;
+    -webkit-transform: translate(0, -50%);
+        -ms-transform: translate(0, -50%);
+            transform: translate(0, -50%);
+  }
+  
+  .effect1 .bg:before, .effect1 .bg:after {
+    content: '';
+    height: 2px;
+    width: 10px;
+    background: var(--default);
+    position: absolute;
+    right: -2px;      
+    -webkit-transition: all 0.3s;      
+    -o-transition: all 0.3s;      
+    transition: all 0.3s;
+  }
+  
+  .effect1 .bg:before {
+    bottom: 3px;
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  .effect1 .bg:after{
+    top: 3px;
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+  }
+  
+  .effect1:hover .bg:before,
+  .effect1:hover .bg:after{
+    right: 0;
+  }
+  
+  .effect1:hover .bg:before{
+    bottom: 6px;
+  }
+  
+  .effect1:hover .bg:after{
+    top: 6px;
+  }
+/* .button-buy {
     align-self: center;
     background-color: var(--header-background);
     background-image: none;
@@ -156,7 +308,7 @@ main div:not(:first-of-type) div div:first-of-type{
   
 .button-buy:focus {
     box-shadow: var(--default) 2px 8px 4px -6px;
-}
+} */
 
 @media screen and (max-width: 768px){
     main div:first-of-type{
@@ -168,15 +320,30 @@ main div:not(:first-of-type) div div:first-of-type{
         
     }
     main div:not(:first-of-type){
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: 0%;
+        margin-right: 0%;
         width: 98.7%;
-    }
-    .button-buy{
-        margin-right: 25px;
     }
     .quantity.buttons_added {
         margin-top: 12px;
         margin-bottom: 12px;
+    }
+    .footer div div{
+        box-shadow: none;
+    }
+    table {
+        box-shadow: none;
+    }
+    .button-buy{
+        display: flex;
+        justify-content: center;
+        margin-left: 0%;
+        margin-right: 0%;
+        padding-left: 60%;
+    }
+    .footer div p {
+        display: inline;
+        font-size: 2rem;
+        width: 25%;
     }
 }
